# political-prediction

./: .gitignore  INSTALL.md  README.md  pyproject.toml  pytest.ini  requirements.txt
api/: .env_exemple  test.py  test_db.py
api/app/: main.py
api/app/core/: config.py
api/app/db/: database.py
api/app/endpoints/: communes_endpoints.py  prediction_endpoints.py  train_endpoints.py
api/src/: main.py
data/: datagouv.ipynb  datagouv_api.py  df_election_2012.ipynb  df_election_2017.ipynb  election.ipynb  full_df.ipynb  full_df_final.ipynb  full_stat.ipynb  insee.ipynb  services.py
data/src/: .~lock.election.csv#  election.csv
django_app/: manage.py
django_app/political_prediction/: asgi.py  settings.py  urls.py  wsgi.py
django_app/templates/: base.html
django_political_app/: .env_exemple  manage.py
django_political_app/core/: tests.py
django_political_app/detail/: services.py  tests.py  urls.py  views.py
django_political_app/django_political_app/: asgi.py  settings.py  urls.py  wsgi.py
django_political_app/map/: services.py  tests.py  urls.py  views.py
django_political_app/predictions/: services.py  tests.py  urls.py  views.py
django_political_app/templates/: base.css  base.html
django_political_app/users/: tests.py  urls.py  views.py
eda/: eda_conjugality.ipynb  eda_final.ipynb  eda_household.ipynb  eda_population.ipynb  eda_v2.ipynb
maquette/: predilection.html
ml/: Monitoring.py  baseline.ipynb  classification.ipynb  forest.ipynb  model_evaluation.ipynb  model_v2.ipynb
ml/models/: predilection_model_2026-04-01
scripts/: ingest.py
(+48 files in other folders)
