[project]
name = "political-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-tailwind>=4.4.2",
    "fastapi>=0.135.1",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
